# PySOAR-C

./: .coverage  .gitignore  README  pyproject.toml
arch2022_benchmarks/: ARCH_res.py  Autotrans_shift.slxc  NLF_example.py  ha_tf.py  pyproject.toml  read_res.py  test_cor_algo_2.py  test_coreAlgorithm.py  test_coreAlgorithm2.py
arch2022_benchmarks/NonLinearFunction_mo/Himmelblaus_budget_100_20_maxtrs/: Himmelblaus_budget_100_20_maxtrs_seed_1234567.pkl
arch2022_benchmarks/NonLinearFunction_mo/Himmelblaus_budget_500_20_maxtrs/: Himmelblaus_budget_500_20_maxtrs_seed_1234567.pkl
arch2022_benchmarks/NonLinearFunction_mo/Himmelblaus_budget_60_20_maxtrs/: Himmelblaus_budget_60_20_maxtrs_seed_1234567.pkl
arch2022_benchmarks/NonLinearFunction_mo/Himmelblaus_budget_80_20_maxtrs/: Himmelblaus_budget_80_20_maxtrs_seed_1234567.pkl
arch2022_benchmarks/TEST123/NLF_1_budget_500_1_reps/: NLF_1_budget_500_1_reps_seed_1234567.pkl
arch2022_benchmarks/TEST123/NLF_budget_2000_10_reps/: NLF_budget_2000_10_reps_seed_123456.pkl
arch2022_benchmarks/TEST123/NLF_budget_500_1_reps/: NLF_budget_500_1_reps_seed_123456.pkl  NLF_budget_500_1_reps_seed_1234567.pkl
arch2022_benchmarks/benchmarks/: __main__.py
arch2022_benchmarks/benchmarks/AT_benchmark/: run_AT1.py  run_AT2.py  run_AT51.py  run_AT52.py  run_AT53.py  run_AT54.py  run_AT61.py  run_AT62.py  run_AT63.py  run_AT64.py
arch2022_benchmarks/benchmarks/CC_benchmark/: CC_specifications.py  run_CC1.py  run_CC2.py  run_CC3.py  run_CC4.py  run_CC5.py  run_CCx.py
arch2022_benchmarks/benchmarks/F16_benchmark/: run_F16_alt4040.py
arch2022_benchmarks/benchmarks/SC_benchmark/: run_SC1.py
arch2022_benchmarks/benchmarks/misc_files/: CC_results.py
arch2022_benchmarks/benchmarks/models/: __init__.py  autotrans.py
arch2022_benchmarks/benchmarks_instance_2/: __main__.py
arch2022_benchmarks/benchmarks_instance_2/AFC_benchmark/: AFC_specification.py  run_AFC27.py  run_AFC29.py  run_AFC33.py
arch2022_benchmarks/benchmarks_instance_2/AT_benchmark/: AT_specifications.py  run_AT1.py  run_AT52.py  run_AT62.py  run_AT64.py
arch2022_benchmarks/benchmarks_instance_2/CC_benchmark/: CC_specifications.py  run_CC1.py  run_CC3.py  run_CC4.py
arch2022_benchmarks/benchmarks_instance_2/NN_benchmark/: run_NN1.py  run_NNx.py
arch2022_benchmarks/benchmarks_instance_2/SC_benchmark/: run_SC1.py
arch2022_benchmarks/benchmarks_instance_2/misc_files/: gpr.py  test_at_inst2.py
arch2022_benchmarks/benchmarks_instance_2/models/: __init__.py  afc.py  autotrans.py  f16.py  f16_alt_2300.py
arch2022_benchmarks/slprj/_jitprj/: jitEngineAccessInfo.mat  sEwxHoqa8wlrghciKsdxEM.l  sEwxHoqa8wlrghciKsdxEM.mat  sMoV1rtjtxZEojzE65mdU1F.l  sMoV1rtjtxZEojzE65mdU1F.mat  sQFrJVbSFpbRKxhjrVthEWF.mat  sch59UalUV5SvxgZMeTISDD.mat  shGzw5h9mXDwK1rnbPv6Y5.l  shGzw5h9mXDwK1rnbPv6Y5.mat
arch2022_benchmarks/slprj/_sfprj/Autotrans_shift/: amsi_serial.mat
arch2022_benchmarks/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  sEwxHoqa8wlrghciKsdxEM.mat  sMoV1rtjtxZEojzE65mdU1F.mat  sQFrJVbSFpbRKxhjrVthEWF.mat  sch59UalUV5SvxgZMeTISDD.mat  shGzw5h9mXDwK1rnbPv6Y5.mat
pysoar/: __init__.py  pyproject.toml
pysoar/coreAlgorithm/: PySOAR.py  __init__.py
pysoar/demos/: test_functions.py
pysoar/kriging_gpr/interface/: OK_Rmodel_kd_nugget.py
pysoar/pysoar/coreAlgorithm/: PySOAR.py  PySOAR_timed.py  PySOAR_v2.py  PySOAR_v3.py  PySOAR_v4.py  PySOAR_v5.py  PySOAR_v6.py  PySOAR_v8.py  PySOAR_v9.py  __init__.py
pysoar/pysoar/sampling/: __init__.py
pysoar/pysoar/staliroIntegration/: __init__.py  staliroIntegrate.py
pysoar/pysoar/trustRegion/: __init__.py  gp_local_search.py  local_search.py  localsearch_test.py
pysoar/pysoar/utils/: CrowdingDist_kd.py  EIcalc_kd.py  __init__.py  compute_robustness.py  divide_points.py  function.py  quadratic_model.py
pysoar/staliroIntegration/: staliroIntegrate.py
pysoar/trustRegion/: gp_local_search.py
pysoar/utils/: ei_cd.py
(+46 files in other folders)
