[tool.poetry]
name = "pysoarc"
version = "0.1.1"
description = ""
authors = ["Tanmay Khandait <tkhandai@asu.edu>"]
packages = [{include="pysoarc"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "*"
numdifftools = "^0.9.40"
pyswarms = "^1.3.0"
pyswarm = "^0.6"
scipy = "*"
matplotlib = "^3.5.2"
scikit-optimize = "^0.9.0"
rtamt = {git = "https://github.com/nickovic/rtamt.git", rev = "c0fb9e6"}
coverage = "^6.4.2"
jmetalpy = "^1.5.5"
deap = "^1.3.3"
pymoo = "^0.6.0"
polytope = "^0.2.3"
Shapely = "^1.8.2"
psy-taliro = "^1.0.0b7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
