[tool.poetry]
name = "pysoar"
version = "0.1.0"
description = ""
authors = ["Tanmay Khandait <tkhandai@asu.edu>"]
packages = [{include="pysoar"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "*"
numdifftools = "^0.9.40"
pyswarms = "^1.3.0"
pyswarm = "^0.6"
scipy = "*"
matplotlib = "^3.5.2"
scikit-optimize = "^0.9.0"
psy-taliro = {version = "1.0.0b9", extras = ["rtamt"]}
coverage = "^6.4.2"
jmetalpy = "^1.5.5"
deap = "^1.3.3"
pymoo = "^0.6.0"
matlabengine = "9.12.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
