[tool.poetry]
name = "arch-benchmarks2021"
version = "0.1.5"
description = ""
authors = ["Aniruddh Chandratre <achand75@asu.edu>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
numpy = "^1.20.3"
scipy = "^1.6.3"
aerobench = {git = "https://github.com/qthibeault/aerobenchvvpython.git"}
psy-taliro = {git = "https://gitlab.com/sbtg/psy-taliro", rev = "v1.0.0b6"}
rtamt = {git = "https://github.com/nickovic/rtamt.git", rev = "c0fb9e6"}
pysoar = {path = "../pysoar"}


[tool.poetry.dev-dependencies]
mypy = "^0"
flake8 = "^3.9.0"
flake8-comprehensions = "^3.4.0"
flake8-pyi = "^20.10.0"
flake8-return = "^1.1.2"
pep8-naming = "^0.11.1"
flake8-use-fstring = "^1.1"
flake8-import-order = "^0.18.1"
flake8-annotations-complexity = "^0.0.6"
flake8-todo = "^0.7"
black = "^21.5b1"
isort = "^5.9.2"
Sphinx = "^4.1.2"
sphinx-autodocgen = "^1.2"
pandas = "^1.3.1"
tltk-mtl = "^0.0.27"
sphinx-autobuild = "^2021.3.14"
furo = "^2021.8.11-beta.42"
rstcheck = "^3.3.1"
plotly = "^5.3.1"
kaleido = "0.2.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
