[tool.poetry]
name = "arch-benchmarks2021"
version = "0.1.5"
description = ""
authors = ["Aniruddh Chandratre <achand75@asu.edu>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
numpy = "^1.20.3"
scipy = "^1.6.3"
aerobench = {git = "https://github.com/qthibeault/aerobenchvvpython.git"}
psy-taliro = {git = "https://gitlab.com/sbtg/psy-taliro", rev = "v1.0.0b6"}
rtamt = {git = "https://github.com/nickovic/rtamt.git", rev = "c0fb9e6"}
pysoar = {path = "../pysoar"}
polytope = "^0.2.3"
Shapely = "^1.8.2"

[tool.poetry.dev-dependencies]
mypy = "^0"
pandas = "^1.3.1"
tltk-mtl = "^0.0.27"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
