[tool.poetry]
name = "pysoar"
version = "0.1.1"
description = ""
authors = ["Mina Jiang <XXXXX@asu.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "*"
numdifftools = "^0.9.40"
pyswarms = "^1.3.0"
pyswarm = "^0.6"
scipy = "*"
matplotlib = "^3.5.2"
scikit-optimize = "^0.9.0"
psy-taliro = {git = "https://gitlab.com/sbtg/psy-taliro", rev = "v1.0.0b6"}
rtamt = {git = "https://github.com/nickovic/rtamt.git", rev = "c0fb9e6"}
coverage = "^6.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
